--- a/zhongshi-etc-user-dto/pom.xml
+++ b/zhongshi-etc-user-dto/pom.xml
@@ -15,6 +15,7 @@
 		<dependency>  
 			<groupId>com.zhongshi</groupId>
 			<artifactId>zhongshi-etc-dto</artifactId>
+			<version>${zhongshi-etc-dto.version}</version>
 			<type>pom</type>
 		</dependency>
 		<!-- User End -->
