--- a/zhongshi-etc-service-rpc-api-user/pom.xml
+++ b/zhongshi-etc-service-rpc-api-user/pom.xml
@@ -16,19 +16,16 @@
 
 
 		<!-- User Begin -->    
-		<dependency>
-			<groupId>com.zhongshi</groupId>
-			<artifactId>zhongshi-etc-user-vo</artifactId>
-		</dependency>   
-		
 		<dependency> 
 			<groupId>com.zhongshi</groupId> 
 			<artifactId>zhongshi-etc-user-dto</artifactId>
+			<version>${zhongshi-etc-user-dto.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.zhongshi</groupId>  
 			<artifactId>zhongshi-etc-service-rpc-api</artifactId>
+			<version>${zhongshi-etc-service-rpc-api.version}</version>
 			<type>pom</type>
 		</dependency> 
 		<!-- User End -->
