--- a/pom.xml
+++ b/pom.xml
@@ -3,68 +3,59 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.zhongshi</groupId>
-		<artifactId>zhongshi-etc-parent</artifactId>
-		<version>1.5.0-SNAPSHOT</version>  
+		<groupId>com.jiumao</groupId>
+		<artifactId>jiumao-saas-parent</artifactId>
+		<version>1.5.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>zhongshi-etc-user</artifactId>
-	<version>4.0.0-ZHONGSHI-SNAPSHOT</version>
-	<packaging>pom</packaging>    
- 
-  
+	<artifactId>jiumao-saas-user</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
+
+
 	<properties>
 
-   
-		<application-run>com.zhongshi.UserApplication</application-run>
 
+		<application-run>com.jiumao.UserApplication</application-run>
 
-		<!-- zhongshi-etc-cloud Begin -->  
-		<zhongshi-etc-service-base-impl.version>1.5.0-SNAPSHOT</zhongshi-etc-service-base-impl.version>
-		<!-- zhongshi-etc-cloud End -->
-
-
-		<!-- Parent Begin -->
-		<zhongshi-etc-vo.version>1.5.0-SNAPSHOT</zhongshi-etc-vo.version>
-		<zhongshi-etc-do.version>1.5.0-SNAPSHOT</zhongshi-etc-do.version>
-		<zhongshi-etc-dto.version>1.5.0-SNAPSHOT</zhongshi-etc-dto.version>
-		<zhongshi-etc-service-impl.version>1.5.0-SNAPSHOT</zhongshi-etc-service-impl.version>
-		<zhongshi-etc-service-rpc-api.version>1.5.0-SNAPSHOT</zhongshi-etc-service-rpc-api.version>
-		<zhongshi-etc-service-rest-api.version>1.5.0-SNAPSHOT</zhongshi-etc-service-rest-api.version>
-		<!-- Parent  End  -->
-		
-  
 		<!-- User Begin -->
-		<zhongshi-etc-user-vo.version>4.0.0-ZHONGSHI-SNAPSHOT</zhongshi-etc-user-vo.version>
-		<zhongshi-etc-user-do.version>4.0.0-ZHONGSHI-SNAPSHOT</zhongshi-etc-user-do.version>
-		<zhongshi-etc-user-dto.version>4.0.0-ZHONGSHI-SNAPSHOT</zhongshi-etc-user-dto.version>
-		<zhongshi-etc-user-info.version>4.0.0-ZHONGSHI-SNAPSHOT</zhongshi-etc-user-info.version>
-		<zhongshi-etc-service-rpc-api-user.version>4.0.0-ZHONGSHI-SNAPSHOT</zhongshi-etc-service-rpc-api-user.version>
-		<zhongshi-etc-service-rest-api-user.version>4.0.0-ZHONGSHI-SNAPSHOT</zhongshi-etc-service-rest-api-user.version>
+		<jiumao-saas-user-vo.version>1.0.0-SNAPSHOT</jiumao-saas-user-vo.version>
+		<jiumao-saas-user-do.version>1.0.0-SNAPSHOT</jiumao-saas-user-do.version>
+		<jiumao-saas-user-dto.version>1.0.0-SNAPSHOT</jiumao-saas-user-dto.version>
+		<jiumao-saas-user-enum.version>1.0.0-SNAPSHOT</jiumao-saas-user-enum.version>
+		<jiumao-saas-service-rpc-api-user.version>1.0.0-SNAPSHOT</jiumao-saas-service-rpc-api-user.version>
+		<jiumao-saas-service-rest-api-user.version>1.0.0-SNAPSHOT</jiumao-saas-service-rest-api-user.version>
 		<!-- User End -->
+		
+		
+		<jiumao-saas-sso-user.version>1.0.0-SNAPSHOT</jiumao-saas-sso-user.version>
+		
+		<jiumao-saas-form-enum.version>1.0.0-SNAPSHOT</jiumao-saas-form-enum.version>
+		<jiumao-saas-service-rpc-api-sso.version>1.0.0-SNAPSHOT</jiumao-saas-service-rpc-api-sso.version>
+		<jiumao-saas-service-rpc-api-form.version>1.0.0-SNAPSHOT</jiumao-saas-service-rpc-api-form.version>
+		<jiumao-saas-service-rpc-api-message.version>1.0.0-SNAPSHOT</jiumao-saas-service-rpc-api-message.version>
 
 
 	</properties>
 
 
 
-
-	<!-- <distributionManagement>
+	<distributionManagement>
 		<repository>
 			<id>maven-releases</id>
 			<name>Nexus Release Repository</name>
-			<url>http://ip/repository/maven-releases/</url>
+			<url>http://175.178.52.106:8081/repository/maven-releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>maven-snapshots</id>
 			<name>Nexus Snapshot Repository</name>
-			<url>http://ip/repository/maven-snapshots/</url>
+			<url>http://175.178.52.106:8081/repository/maven-snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 	<repositories>
 		<repository>
 			<id>maven-public</id>
 			<name>Nexus Repository</name>
-			<url>http://ip/repository/maven-public/</url>
+			<url>http://175.178.52.106:8081/repository/maven-public/</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
@@ -77,7 +68,7 @@
 		<pluginRepository>
 			<id>maven-public</id>
 			<name>Nexus Plugin Repository</name>
-			<url>http://ip/repository/maven-public/</url>
+			<url>http://175.178.52.106:8081/repository/maven-public/</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
@@ -85,19 +76,19 @@
 				<enabled>true</enabled>
 			</releases>
 		</pluginRepository>
-	</pluginRepositories> -->
-	 
+	</pluginRepositories>
+
 
 
 
 
 	<modules>
-		<module>zhongshi-etc-user-vo</module>
-		<module>zhongshi-etc-user-dto</module>
-		<module>zhongshi-etc-service-rpc-api-user</module>
-		<module>zhongshi-etc-service-rest-api-user</module>
-		<module>zhongshi-etc-service-user</module>
-		<module>zhongshi-etc-user-info</module>
+		<module>jiumao-saas-user-vo</module>
+		<module>jiumao-saas-user-dto</module>
+		<module>jiumao-saas-service-rpc-api-user</module>
+		<module>jiumao-saas-service-rest-api-user</module>
+		<module>jiumao-saas-service-user</module>
+		<module>jiumao-saas-user-enum</module>
 	</modules>
 
 
