--- a/pom.xml
+++ b/pom.xml
@@ -3,92 +3,46 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.jiumao</groupId>
-		<artifactId>jiumao-saas-parent</artifactId>
+		<groupId>com.maozi</groupId>
+		<artifactId>maozi-cloud-parent</artifactId>
 		<version>1.5.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>jiumao-saas-user</artifactId>
+	<artifactId>maozi-cloud-user</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 
 	<properties>
 
-
-		<application-run>com.jiumao.UserApplication</application-run>
+		<application-run>com.maozi.UserApplication</application-run>
 
 		<!-- User Begin -->
-		<jiumao-saas-user-vo.version>1.0.0-SNAPSHOT</jiumao-saas-user-vo.version>
-		<jiumao-saas-user-do.version>1.0.0-SNAPSHOT</jiumao-saas-user-do.version>
-		<jiumao-saas-user-dto.version>1.0.0-SNAPSHOT</jiumao-saas-user-dto.version>
-		<jiumao-saas-user-enum.version>1.0.0-SNAPSHOT</jiumao-saas-user-enum.version>
-		<jiumao-saas-service-rpc-api-user.version>1.0.0-SNAPSHOT</jiumao-saas-service-rpc-api-user.version>
-		<jiumao-saas-service-rest-api-user.version>1.0.0-SNAPSHOT</jiumao-saas-service-rest-api-user.version>
+		<maozi-cloud-user-vo.version>1.0.0-SNAPSHOT</maozi-cloud-user-vo.version>
+		<maozi-cloud-user-do.version>1.0.0-SNAPSHOT</maozi-cloud-user-do.version>
+		<maozi-cloud-user-dto.version>1.0.0-SNAPSHOT</maozi-cloud-user-dto.version>
+		<maozi-cloud-user-enum.version>1.0.0-SNAPSHOT</maozi-cloud-user-enum.version>
+		<maozi-cloud-service-rpc-api-user.version>1.0.0-SNAPSHOT</maozi-cloud-service-rpc-api-user.version>
+		<maozi-cloud-service-rest-api-user.version>1.0.0-SNAPSHOT</maozi-cloud-service-rest-api-user.version>
 		<!-- User End -->
 		
 		
-		<jiumao-saas-sso-user.version>1.0.0-SNAPSHOT</jiumao-saas-sso-user.version>
+		<maozi-cloud-sso-user.version>1.0.0-SNAPSHOT</maozi-cloud-sso-user.version>
 		
-		<jiumao-saas-form-enum.version>1.0.0-SNAPSHOT</jiumao-saas-form-enum.version>
-		<jiumao-saas-service-rpc-api-sso.version>1.0.0-SNAPSHOT</jiumao-saas-service-rpc-api-sso.version>
-		<jiumao-saas-service-rpc-api-form.version>1.0.0-SNAPSHOT</jiumao-saas-service-rpc-api-form.version>
-		<jiumao-saas-service-rpc-api-message.version>1.0.0-SNAPSHOT</jiumao-saas-service-rpc-api-message.version>
-
+		<maozi-cloud-service-rpc-api-sso.version>1.0.0-SNAPSHOT</maozi-cloud-service-rpc-api-sso.version>
 
 	</properties>
-
-
-
-	<distributionManagement>
-		<repository>
-			<id>maven-releases</id>
-			<name>Nexus Release Repository</name>
-			<url>http://175.178.52.106:8081/repository/maven-releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>maven-snapshots</id>
-			<name>Nexus Snapshot Repository</name>
-			<url>http://175.178.52.106:8081/repository/maven-snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
-	<repositories>
-		<repository>
-			<id>maven-public</id>
-			<name>Nexus Repository</name>
-			<url>http://175.178.52.106:8081/repository/maven-public/</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>maven-public</id>
-			<name>Nexus Plugin Repository</name>
-			<url>http://175.178.52.106:8081/repository/maven-public/</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</pluginRepository>
-	</pluginRepositories>
 
 
 
 
 
 	<modules>
-		<module>jiumao-saas-user-vo</module>
-		<module>jiumao-saas-user-dto</module>
-		<module>jiumao-saas-service-rpc-api-user</module>
-		<module>jiumao-saas-service-rest-api-user</module>
-		<module>jiumao-saas-service-user</module>
-		<module>jiumao-saas-user-enum</module>
+		<module>maozi-cloud-user-vo</module>
+		<module>maozi-cloud-user-dto</module>
+		<module>maozi-cloud-service-rpc-api-user</module>
+		<module>maozi-cloud-service-rest-api-user</module>
+		<module>maozi-cloud-service-user</module>
+		<module>maozi-cloud-user-enum</module>
 	</modules>
 
 
