feat(*): 重构部分代码，添加部分组件
- @async 、Stream.parallel 同步MDC 、LinkContext数据
- 本地开发灰度自动化部署（通过Git提交文件sha按需构建部署）
- 采用TransmittableThreadLocal解决切换线程传递数据
- 重构项目目录
- 去掉修改Oauth2源码用Dubbo检查token，采用注入RemoteTokenService实现
- 灰度开发
- 解决同环境 不同版本 或 不同开发者测试本地项目 服务调用乱窜问题
- 添加分布式锁功能
- 传输模型与视图模型 构建 Wrapper支持多表查询
- 去掉修改Dubbo源码功能实现容错，采用切面处理
- 模板Do领域模型索引优化
- Pom版本升级
- Swagger 模块介绍配置
- 修复不需要指定启动服务的目录
- 基于 Docker-Desktop 本机快速开发文档优化
- 优化的导入包
- Sonarqube 扫描 警告
- add dto analyze wrapper

--- a/maozi-cloud-service-system/pom.xml
+++ b/maozi-cloud-service-system/pom.xml
@@ -9,6 +9,16 @@
 	</parent>
 	<artifactId>maozi-cloud-service-system</artifactId>
 
+	<properties>
+
+		<maven.test.skip>true</maven.test.skip>
+		<maven.install.skip>true</maven.install.skip>
+		<maven.deploy.skip>true</maven.deploy.skip>
+
+		<application-run>com.maozi.SystemApplication</application-run>
+
+	</properties>
+
 	<dependencies>
 		
 		<dependency>
@@ -39,8 +49,8 @@
 		
 		<dependency>
 			<groupId>com.maozi</groupId>
-			<artifactId>maozi-cloud-service-rpc-api-sso</artifactId>
-			<version>${maozi-cloud-service-rpc-api-sso.version}</version>
+			<artifactId>maozi-cloud-service-rpc-api-oauth</artifactId>
+			<version>${maozi-cloud-service-rpc-api-oauth.version}</version>
 		</dependency>
 
 	</dependencies>
@@ -52,7 +62,7 @@
 
 	<!-- boot打包 Begin -->
 	<build>
-		<finalName>${parent.artifactId}</finalName>
+		<finalName>${artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
