--- a/maozi-cloud-service-system/src/main/resources/bootstrap.properties
+++ b/maozi-cloud-service-system/src/main/resources/bootstrap.properties
@@ -1,3 +1,5 @@
-spring.cloud.nacos.config.shared-dataids=${application-nacos-config},boot-datasource.yml,boot-mybatisplus.yml
+application-project-abbreviation=system
+
+spring.cloud.nacos.config.shared-dataids=${application-nacos-config-service},boot-datasource.yml,boot-mybatisplus.yml
 
 spring.cloud.nacos.config.refreshable-dataids=${spring.application.name}.yml
